Fixed navigation bar, it was not wrapping index.html style.css

--- a/style.css
+++ b/style.css
@@ -68,9 +68,10 @@ body {
             
             .navi {
                 display: flex;
-                flex-direction: column;
-                align-items: flex-end;
+                flex-direction: row;
+                align-items: center;
                 flex-wrap: wrap;
+                justify-content: center;
                 gap: 8px;   
             }
 
